# raspi5

./: .gitignore  README.md
docs/0030_要素技術/0010_RaspberryPi/: 0010_RaspberryPi5初期設定方法.md  0020_RaspberryPiZero2W初期設定方法.md  0030_DockerでのCSIカメラ使用方法.md  0040_RaspberryPiPico初期設定方法.md  0050_RaspberryPiPicoでのサーボモータ制御.md  0060_RaspberryPiZero2WでのWebRTC配信方法.md
docs/0030_要素技術/0010_RaspberryPi5/: 0010_初期設定方法_調査資料.md
docs/0030_要素技術/0010_RaspberryPi5.md/: 0010_初期設定方法_調査資料.md
docs/0030_要素技術/0020_Docker.md/: 0010_Dockerの設定方法_調査資料.md
docs/0030_要素技術/0030_VSCode/: 0010_VSCodeの設定_調査資料.md
docs/0030_要素技術/0040_Poetry/: 0010_Poetry使用方法_チュートリアル.md
src/MauiVideoApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MauiVideoApp.csproj  README.md
src/akhq/: README.md  docker-compose.yaml
src/cloud/: README.md
src/csicam/: README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_kafka.txt
src/csicam/csicam/: capture_to_image.py  get_image.py  get_stream.py  produce_image.py  serve_rtsp.py
src/fastapi/: README.md  data.db  logger.ini  main.py  requirements.txt
src/flutterapp/: pubspec.yaml
src/kafka/: README.md  docker-compose.yaml  kafka-secrets.yaml
src/kafka_k3s/: kafka-configmap.yaml  kafka-service.yaml  kafka-statefulset.yaml
src/local/: README.md
src/pico/: flash.py  servo_sg90.py
src/rancher/: Dockerfile  README.md  docker-compose.yaml
src/stream_analysis/: README.md  pyproject.toml  requirements.txt
src/stream_analysis/stream_analysis/: reconstruct.py  stream_to_image.py
(+135 files in other folders)
