[tool.poetry]
name = "csicam"
version = "0.1.0"
description = ""
authors = ["Daiichiro Noda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
picamera2 = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
